--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
    <body>
       <p>Radio check. Pilot, please confirm.</p>
       <p>Go for takeoff!</p>
+      <p>OK! 3-2-1, Blast off!</p>
    </body>
 </html>
